# cl-tool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  System.mak  SystemWindows_NT.mak  UseGoogleTest.cmake  UseOpenCL.cmake  cl-double-pendulum.cc  cl-double-pendulum.cl  cl-double-pendulum.hh  cl-matrix-mult.cc  cl-matrix-mult.hh  cl-matrix-rand.cl  cl-platform-info.cc  cl-platform-info.hh  cl-platform-probe.cc  cl-platform-probe.hh  cl-tool.cc  cl-user-selection.cc  cl-user-selection.hh  googletest.CMakeLists.txt.in  parse-cmd-line.cc  parse-cmd-line.hh
unit-tests/: cl-tool-unit-test.cc
